src/style/base/_typography.scss
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Sen&display=swap');

html, body {
  font-family: 'Inter', sans-serif;
}

h1 {
  font-family: 'Sen', sans-serif;
  font-weight: 500;
  font-size: 3.2rem;
}

h3 {
  font-size: 2.2rem;
  font-weight: 400;
}

.quote {
  font-family: 'Sen', sans-serif;
}

p {
  padding: 10px 0;
  font-weight: 300;
  letter-spacing: 0.03rem;
}

p,
a {
  font-size: $default-font-size;
}

a,
a:link,
a:hover,
a:visited,
a:active {
  text-decoration: none;
  cursor: pointer;
}

a:hover {
  transition: all 0.3s ease-in-out;
}

.section-title {
  margin: 0px;
  margin-bottom: 4.5rem;
  font-size: $big-font-size;

  @include respond(phone) {
    font-size: 2.8rem;
  }
}

.dark-blue-text {
  color: $dark-blue-text !important;
}

.text-color-main {
  background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;

  // Responsive text purple style
  @include respond(phone) {
    background-image: none;
    -webkit-text-fill-color: $secondary-color;
  }

  &:hover {
    transform: translateX(2px);
  }
}

